WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69559
Crash when PluginProxy object is destroyed inside PluginProxy::pluginScriptableNPObject
https://bugs.webkit.org/show_bug.cgi?id=69559
Summary
Crash when PluginProxy object is destroyed inside PluginProxy::pluginScriptab...
Anders Carlsson
Reported
2011-10-06 13:46:15 PDT
Crash when PluginProxy object is destroyed inside PluginProxy::pluginScriptableNPObject
Attachments
Patch
(1.98 KB, patch)
2011-10-06 13:53 PDT
,
Anders Carlsson
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-10-06 13:53:51 PDT
Created
attachment 110011
[details]
Patch
Maciej Stachowiak
Comment 2
2011-10-06 13:55:20 PDT
Comment on
attachment 110011
[details]
Patch Is it possible to make a test for this?
Maciej Stachowiak
Comment 3
2011-10-06 13:55:51 PDT
Comment on
attachment 110011
[details]
Patch I see now from the ChangeLog comment that it's not. r=me
Anders Carlsson
Comment 4
2011-10-06 13:58:44 PDT
Committed
r96855
: <
http://trac.webkit.org/changeset/96855
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug